--- a/app/src/main/res/layout/activity_add_session.xml
+++ b/app/src/main/res/layout/activity_add_session.xml
@@ -54,11 +54,11 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="250dp"
-        android:layout_marginEnd="14dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="52dp"
         android:text="To"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/uto" />
+        app:layout_constraintStart_toEndOf="@+id/from"
+        app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <EditText
         android:id="@+id/from"
@@ -83,6 +83,8 @@
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
     <Button
+        style="@style/Widget.AppCompat.Button.Colored"
+
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
