--- a/app/src/main/res/layout/activity_session_card.xml
+++ b/app/src/main/res/layout/activity_session_card.xml
@@ -9,21 +9,23 @@
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="@dimen/SessionCardheight"
         android:layout_gravity="center"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        >
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:orientation="horizontal"
+            android:background="@color/SessionCardLayout"
 
             >
 
             <LinearLayout
                 android:id="@+id/idFirstSessionLayout"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_width="@dimen/SessionCardFirstSessionLayoutWidth"
+                android:layout_height="match_parent"
                 android:background="@color/card_first_portion"
                 android:orientation="vertical">
 
@@ -73,16 +75,19 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Title"
-                    android:textSize="30dp" />
+                    android:textSize="20dp"
+                    android:textColor="@color/SessionTitleColor"
+                    />
 
                 <ProgressBar
 
                     android:id="@+id/comp"
                     style="@android:style/Widget.ProgressBar.Horizontal"
-                    android:layout_width="240dp"
+                    android:layout_width="@dimen/ProgressBarWidth"
                     android:layout_height="wrap_content"
                     android:padding="20dp"
                     android:progress="25"
+
 
                     />
 
