--- a/app/src/main/res/layout/activity_view_session_card.xml
+++ b/app/src/main/res/layout/activity_view_session_card.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
         android:text="Lesson Name"
+        android:textColor="@color/SessionViewLable"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,6 +34,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="76dp"
         android:text="Description"
+        android:textColor="@color/SessionViewLable"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -42,7 +45,9 @@
         android:layout_height="19dp"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="40dp"
+
         android:ems="10"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,6 +58,8 @@
         android:layout_marginBottom="251dp"
         android:layout_marginStart="32dp"
         android:text="From"
+        android:textColor="@color/SessionViewLable"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -63,6 +70,8 @@
         android:layout_marginBottom="250dp"
         android:layout_marginEnd="14dp"
         android:text="To"
+        android:textColor="@color/SessionViewLable"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/uto" />
 
@@ -72,6 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="248dp"
         android:layout_marginStart="16dp"
+        android:textStyle="bold"
+
         android:ems="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView3" />
@@ -82,6 +93,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="248dp"
         android:layout_marginEnd="16dp"
+        android:textStyle="bold"
+
         android:ems="10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -94,6 +107,8 @@
         android:layout_marginBottom="177dp"
         android:layout_marginStart="32dp"
         android:text="Work Complete"
+        android:textColor="@color/SessionViewLable"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -104,6 +119,8 @@
         android:layout_marginBottom="176dp"
         android:layout_marginEnd="16dp"
         android:ems="10"
+        android:textStyle="bold"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -113,6 +130,9 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="132dp"
+        android:textStyle="bold"
+
+
         android:ems="10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
