--- a/app/src/main/res/layout/fragment_study_session.xml
+++ b/app/src/main/res/layout/fragment_study_session.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.StudySessionFragment">
+    tools:context=".fragment.StudySessionFragment"
+    android:background="@color/BackgroundColor"
+
+    >
 
     <ListView
         android:id="@+id/studySessionListVIew"
@@ -12,4 +17,17 @@
         android:clickable="true"
         android:entries="@array/study_session_list_items"
         tools:dividerHeight="@dimen/layout_margin" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/idSAddFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/add_icon"
+        app:backgroundTint="@color/colorPrimaryDark"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal" />
+
 </FrameLayout>
