--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,10 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+
+    style="@style/Widget.AppCompat.Button"
+    style="@style/Widget.AppCompat.Button.Colored"
+    style="@style/Widget.AppCompat.Button.Borderless"
+    style="@style/Widget.AppCompat.Button.Borderless.Colored"
 </resources>
